# kaycebasques.net

./: .gitignore  BUILD.bazel  README.md  conf.py  dev.fish  index.rst  pypi.sh  termux.py
.agents/projects/tags/: PROJECT.md
.agents/skills/projects/: SKILL.md
.github/workflows/: pages.yml  prod.yml
cli/: index.rst  recursive-delete.rst
src/: BUILD.bazel  conf.py  index.rst
src/2026/03/: rotation.rst
src/2026/03/delete/: index.rst
src/2026/03/overlines/: index.rst
src/2026/03/rayleigh/: index.rst
src/2026/04/: gradient.rst  tapestry.rst
src/_templates/: layout.html
