load("@rules_python//sphinxdocs:sphinx.bzl", "sphinx_build_binary", "sphinx_docs")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")

sphinx_docs_library(
    name = "sources",
    srcs = [
        "index.rst",
    ],
)

sphinx_build_binary(
    name = "sphinx",
    deps = [
        "@pypi//sphinx",
    ]
)

sphinx_docs(
    name = "src",
    config = "conf.py",
    formats = [
        "html",
    ],
    sphinx = ":sphinx",
    strip_prefix = "src/",
    deps = [
        ":sources",
    ]
)

alias(
    name = "ls",
    actual = "//src:_src/_sources",
)
