load("@rules_python//sphinxdocs:sphinx.bzl", "sphinx_build_binary", "sphinx_docs")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")

sphinx_docs_library(
    name = "srcs",
    srcs = [
        "2026/03/delete/index.rst",
        "2026/03/overlines/index.rst",
	"2026/03/rotation/index.rst",
        "index.rst",
    ],
)

sphinx_build_binary(
    name = "sphinx",
    deps = [
        "@pypi//sphinx",
    ]
)

sphinx_docs(
    name = "src",
    config = "conf.py",
    formats = [
        "html",
    ],
    sphinx = ":sphinx",
    strip_prefix = "src/",
    deps = [
        ":srcs",
    ]
)

alias(
    name = "sources",
    actual = "//src:_src/_sources",
)

alias(
    name = "server",
    actual = "//src:src.serve",
)
